# ugetopt

./: README.md  getopt.1  getopt.1.adoc  getopt.c  meson.build  ugetopt.1  ugetopt.1.adoc
